[project]
name = "xiplusplus"
version = "0.1.0"
description = "The first CCCP-compliant programming language!"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py
)
'''
